--- a/part3_course/package.json
+++ b/part3_course/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "backend",
+  "name": "part3_course",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
+    "dev" : "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Sree Vardhan",
+  "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
